--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "db:create:migration": "sequelize migration:generate --name",
+    "db:migrate": "sequelize db:migrate",
+    "db:rollback": "sequelize db:migrate:undo",
+    "db:rollback:all": "sequelize db:migrate:undo:all",
+    "postinstall": "sequelize db:migrate"
+  },
+  "repository":{
+    "type": "git",
+    "url": "https://github.com/razmikh/db-Interface.git"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -15,7 +24,9 @@
     "express-messages": "*",
     "morgan": "~1.9.0",
     "pg-promise": "^8.2.2",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "sequelize": "*",
+    "sequelize-cli":"*"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
